# riqi

./: AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  README.md  README.zh-CN.md  design.md  holiday_design.md  refactor.md
.github/workflows/: build.yml
resources/config/: riqi_config_example.toml
resources/holidays/: cn_zh - Copy.json  cn_zh.json  de.json  fr.json  ja_jp.json  kr.json  kr_ko.json  meta.json  zh_cn.json
resources/holidays/2025/: de_de.json  en_de.json  (+7 more)
resources/theme/: blue.toml  dark.toml  forest.toml  lavender.toml  mint.toml  ningmen.toml  ocean.toml  ruby.toml  sunset.toml
src/: cli.rs  data.rs  day_component.rs  events.rs  holiday.rs  holiday_data.rs  holiday_tmp.rs  holiday_updater.rs  holiday_utils.rs  i18n.rs  json_processor.rs  layout.rs  lib.rs  locale.rs  lunar.rs  main.rs  month_component.rs  month_render.rs  state.rs  theme.rs  translate.rs  update_logic.rs  utils.rs
src-bak/: cli.rs  events.rs  main.rs  state.rs  text.txt  translate.rs  utils.rs
src-bak/component/: bottom_line_component.rs  month_component.rs
src-bak/config/: config_struct.rs  file_config_loader.rs  file_config_struct.rs  locale.rs  mod.rs  theme_loader.rs  xdg.rs
src-bak/holiday/: downloader.rs  load.rs  types.rs  update.rs
src/component/: bottom_line_component.rs  day_component.rs  mod.rs  month_component.rs  utils.rs
src/config/: cli.rs  config_file_loader.rs  config_init.rs  config_main.rs  config_struct.rs  file_config_struct.rs  locale.rs  mod.rs  model.rs  xdg.rs
src/data/: calendar.rs
src/holiday/: load.rs  manager.rs  mod.rs  modal.rs  types.rs  update.rs  utils.rs
src/theme/: color_serde.rs  mod.rs  theme_loader.rs  theme_model.rs
src/types/: holiday.rs  holiday_meta.rs  layout.rs  mod.rs
src/ui/: bottom_line_component.rs  day_cell.rs  goto_panel_component.rs  layout.rs  mod.rs  month_calendar.rs  month_component.rs  notification_component.rs  translate.rs  utils.rs  week_row.rs
(+11 files in other folders)
