[package]
name = "riqi"
version = "0.1.0"
edition = "2021"
default-run = "riqi"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3.2"
toml = "0.8.23"
tyme4rs = "1.3.0"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "download_meta"
path = "src/bin/download_meta.rs"
